docs: align backend roadmap 100% with DATABASE_SCHEMA.md